# MulticoreOCamlThesis

./: README.md
CoarseGrained/: OCamlNotes.md  dune-project
CoarseGrained/SideNotes/: OCamlNotes.md
CoarseGrained/_build/default/test/: test_FineGrained.ml
CoarseGrained/_build/default/test/.merlin-conf/: exe-test_CoarseGrained  exe-test_FineGrained  (+1 more)
CoarseGrained/lib/: CoarseGrained.ml  CoarseGrained.mli  FineGrained.ml  FineGrained.mli  PlainLinkedList.ml  PlainLinkedList.mli  dune
CoarseGrained/test/: dune  test_CoarseGrained.ml
Multicore_Benchmarking/: dune-project
Multicore_Benchmarking/SideNotes/: OCamlNotes.md  presentationSkeleton.md
Multicore_Benchmarking/_build/default/: BenchmarkingThesisS4644417.opam
Multicore_Benchmarking/_build/default/lib/: CoarseGrained.ml  CoarseGrained.mli  FineGrained.ml  FineGrained.mli  LockFree.ml  PlainLinkedList.ml  PlainLinkedList.mli
Multicore_Benchmarking/_build/default/lib/.Approach.objs/: approach__LockFree.impl.d  approach__LockFree.intf.d
Multicore_Benchmarking/_build/default/lib/.Approach.objs/byte/: approach__LockFree.cmi  approach__LockFree.cmti
Multicore_Benchmarking/_build/default/lib/.Approach.objs/native/: approach__LockFree.cmx
Multicore_Benchmarking/_build/default/test/: test_FineGrained.ml  test_PlainLinkedList.ml
Multicore_Benchmarking/lib/: CoarseGrained.ml  CoarseGrained.mli  FineGrained.ml  FineGrained.mli  LockFree.ml  LockFree.mli  PlainLinkedList.ml  PlainLinkedList.mli  dune
Multicore_Benchmarking/test/: dune  test_CoarseGrained.ml  test_LockFree.ml  test_PlainLinkedList.ml
(+10 files in other folders)
