(lang dune 3.15)

(name BenchmarkingThesisS4644417)

(generate_opam_files true)

(source
 (github FAUSTMANNSTEF/MulticoreOCamlThesis))

(authors "Stephanos Faustmann")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name BenchmarkingThesisS4644417)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
