(test
 (name test_CoarseGrained)
 (modules test_CoarseGrained)
 (libraries Approach unix ))

(test
 (name test_FineGrained)
 (modules test_FineGrained)
 (libraries Approach unix ))

(test
 (name test_PlainLinkedList)
 (modules test_PlainLinkedList)
 (libraries Approach unix ))

(test
 (name test_LockFree)
 (modules test_LockFree)
 (libraries Approach unix ))
